Bug 89539 - pa_rtpoll_quit() should not be exported in rtpoll.h
Summary: pa_rtpoll_quit() should not be exported in rtpoll.h
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords: love
Depends on:
Blocks:
 
Reported: 2015-03-11 17:03 UTC by Tanu Kaskinen
Modified: 2015-05-25 13:30 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
patch to drop pa_rtpoll_quit() (1.93 KB, patch)
2015-05-20 20:41 UTC, Peter Meerwald
Details | Splinter Review

Description Tanu Kaskinen 2015-03-11 17:03:39 UTC
pa_rtpoll_quit() is only used internally in rtpoll.c, so it shouldn't be exported in rtpoll.h.
Comment 1 Peter Meerwald 2015-05-20 20:41:04 UTC
Created attachment 115930 [details] [review]
patch to drop pa_rtpoll_quit()


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.