src/pulsecore/rtpoll.c
@@ -557,7 +557,9 @@ static int asyncmsgq_read_work(pa_rtpoll_item *i) {
 
         if (!object && code == PA_MESSAGE_SHUTDOWN) {
             pa_asyncmsgq_done(i->userdata, 0);
-            pa_rtpoll_quit(i->rtpoll);
+            /* Requests the loop to exit. Will cause the next iteration of
+             * pa_rtpoll_run() to return 0 */
+            i->rtpoll->quit = true;
             return 1;
         }
 
@@ -623,12 +625,6 @@ pa_rtpoll_item *pa_rtpoll_item_new_asyncmsgq_write(pa_rtpoll *p, pa_rtpoll_prior
     i->userdata = q;
 
     return i;
-}
-
-void pa_rtpoll_quit(pa_rtpoll *p) {
-    pa_assert(p);
-
-    p->quit = true;
 }
 
 bool pa_rtpoll_timer_elapsed(pa_rtpoll *p) {
